--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "jquery": "^3.6.0",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-owl-carousel": "^2.3.3",
+    "react-owl-carousel2": "^0.3.0"
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.14",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
