--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.3",
     "classnames": "^2.3.1",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-owl-carousel": "^2.3.3",
-    "react-owl-carousel2": "^0.3.0"
+    "react-owl-carousel2": "^0.3.0",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
