--- a/package.json
+++ b/package.json
@@ -18,13 +18,16 @@
     "react-dom": "18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.14",
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "@types/react-slick": "^0.23.10",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
     "sass": "^1.53.0",
