--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-medium-image-zoom": "^4.4.3",
     "react-owl-carousel": "^2.3.3",
     "react-owl-carousel2": "^0.3.0",
     "react-redux": "^8.0.2",
